--- a/src/main/java/view/FirstPage.form
+++ b/src/main/java/view/FirstPage.form
@@ -68,11 +68,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Update Employee"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="updateButtonMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="deleteButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Delete Employee"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="deleteButtonMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="displayButton">
       <Properties>
