--- a/src/main/java/view/CreateEmployee.form
+++ b/src/main/java/view/CreateEmployee.form
@@ -168,11 +168,13 @@
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="teamInfo" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="teamInfoTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="level" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="levelTxt" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="teamInfo" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="teamInfoTxt" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="level" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
